# taxeasy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  biome.json  index.html  launch.bat  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: private.key  public.key
src-tauri/migrations/: 001_app.sql  002_client.sql  003_invoices.sql  004_documents.sql  005_ai_workspace.sql  006_business_profile.sql  006_transactions_status.sql  007_accounts_system_role.sql  008_tax_news_cache.sql  009_accounts_deductible.sql  010_recurring_transactions.sql  011_chat_tools.sql  012_mileage.sql  012_mileage_irs_rates.sql  013_schedule_c.sql  014_vendors_1099.sql  015_app_add_i1040_entity.sql  015_client_documents_hash_and_organizer.sql  016_app_add_client_source_folder_path.sql  016_documents_file_hash_fix.sql  017_performance_indexes.sql  018_owner_mileage_logs_backfill.sql
src-tauri/seeds/: coa_ccorp.json  coa_i1040.json  coa_partnership.json  coa_scorp.json  coa_sole_prop.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: agent.rs  bitnet.rs  bonsai.rs  chat.rs  command_paths.rs  glmocr.rs  lmstudio.rs  mod.rs  ocr_pipeline.rs  ollama.rs  smart_ocr.rs  streaming.rs  surya.rs  tax_sources.rs  tesseract.rs  tools.rs
src-tauri/src/commands/: accounts.rs  backup.rs  business_profile.rs  chat.rs  client_export.rs  clients.rs  clients_test.rs  csv_import.rs  dashboard.rs  devtools.rs  documents.rs  drafts.rs  evidence.rs  export.rs  files.rs  invoices.rs  logger.rs  mileage.rs  mileage_test.rs  mod.rs  period.rs  print_helper.rs  (+11 more)
src-tauri/tests/: balance_sheet_regression.rs  dashboard_regression.rs  pnl_regression.rs  reports_integration.rs
(+167 files in other folders)
